# factorymind

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.py
docs/: README.rst
docs/writeup/: conf.py  index.rst  requirements.txt
docs/writeup/source/: factorymind.data_loader.rst  factorymind.exceptions.rst  factorymind.rst  factorymind.timing_utils.rst  modules.rst
notebooks/: example.ipynb
scripts/: example.py
src/factorymind/: data_loader.py  exceptions.py  timing_utils.py
tests/: README.md  test_random_tests.py
tests/factorymind/: test_data_loader.py  test_examplemodule.py  test_exceptions.py  test_timing_utils.py
